plugins {
	id "java-gradle-plugin"
	id "com.gradle.plugin-publish" version "0.9.8"
	id "maven"
}

group = 'com.github.SeelabFhdo'

sourceCompatibility = 1.8

repositories {
	jcenter()
	mavenCentral()
}

dependencies {
	compileOnly 'org.projectlombok:lombok:1.16.20'
	compile 'org.reflections:reflections:0.9.10'
	compile 'commons-io:commons-io:2.6'
	testCompile group: 'junit', name: 'junit', version: '4.12'
	testCompile 'org.hamcrest:hamcrest-all:1.3'
	compile group: 'commons-io', name: 'commons-io', version: '2.6'
}

gradlePlugin {
	plugins {
		CodeGenerator {
			id = "de.seelab.CodeGenerator"
			implementationClass = "de.seelab.codegenerator.CodeGeneratorPlugin"
		}
	}
}

pluginBundle {
	website = 'https://seelab.fh-dortmund.de/'
	vcsUrl = 'https://github.com/seelabfhdo/codegenerator-gradle-plugin'
	plugins {
		CodeGenerator {
			id = "de.seelab.CodeGenerator"
			displayName = "Code Generator Plugin"
			description = "Plugin for custom code generation processes"
			tags = ['code', 'generation', 'codegeneration', 'generate']
		}
	}
}